@@ -15,6 +15,8 @@ Regina - A Normal Surface Theory Calculator
             - Converted option REGINA_JNIDIR to a list of directories.
         normal.exports:
             - Added class SnapPeaExporter.
+        normal.mainui:
+            - Added more keyboard accelerators.
 
 Version 2.3  [ 12 December, 2001 ] - The "Farewell Stillwater" release.
     OVERALL:
